# diyq

./: .geminiignore  .gitattributes  .gitignore  AGENT.md  AGENTS.md  README.md  main.py  pyproject.toml  sha.common.sh  sha.sh  sha_common.sh  test_qmt.py
.agents/: context.md
.claude/: settings.local.json
.gemini/skills/: README.md
.github/workflows/: add-to-project.yml
configs/: default_strategy.json
data/: 510300.csv.txt  510300.parquet
docs/: TODO.md  development_guide.md  requirements.md  research.md  tools.md  user_guide.md
pages/: home.py  index.pn.py  main.py  query_stock.py  stock_research_simple.mo.py  x.py
pkgs/diyq-miniqmt/: main.py  pyproject.toml
ref/: 迅投QMT  FAQ.docx
research/xtquant-archive/: README.md  agent-conversations.md  api-reference.md  debugging-notes.md  index.md  qmt-connector.md  setup-guide.md
research/xtquant/xtdata/: README.md  data_fields_reference.md  hello.py  stock_research_notebook.py  stock_research_simple.py
script/: windows2025-init-ssh.ps1  windows2025-init-wsl1.ps1  windows2025_init-rdp.ps1  windows2025_init.ps1  windows2025_init0.ps1
src/: x.py
src/data/: downloader.py  miniqmt_data_service.py
src/strategy/: backtest_engine.py  base.py  realtime_executor.py
src/trading/: execution_interface.py
src/ui/: app.py
src/utils/: config_manager.py  risk_manager.py
tests/: test_miniqmt_integration.py  test_quant_system.py
