[project]
name = "quant"
version = "0.1.0"
description = "A lightweight quantitative trading system"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "numpy>=2.4.4",
    "polars>=1.40.0",
    "pyarrow>=24.0.0", # perspective

    "nicegui>=3.11.1",
    # workspace 内部依赖
    # 不要用最新版, 当前测试环境的华鑫证券QMT 2.0.0.6只能用 xtquant@241014.1.2
    #    "xtquant==250516.1.1",
    "xtquant==241014.1.2",
]

[dependency-groups]
dev = [
    "pip>=25.3",
    "ipykernel>=7.1.0",
    "jupytext>=1.18.1",
]


[tool.uv]
# workspace 根虽然没代码，但作为聚合包
package = false

# `uv python install`的不是官网文件，而是这个项目打包的便携版: https://github.com/astral-sh/python-build-standalone/
# 镜像较少，参考: https://github.com/tuna/issues/issues/2125
# 已知镜像站点：
# - https://mirror.nju.edu.cn/github-release/astral-sh/python-build-standalone/
# - https://registry.npmmirror.com/-/binary/python-build-standalone/
# - https://gh-proxy.com/github.com/indygreg/python-build-standalone/releases/download
# 镜像下载示例：
# - uv python install --mirror https://registry.npmmirror.com/-/binary/python-build-standalone/ 3.12
# - UV_PYTHON_INSTALL_MIRROR=https://mirror.nju.edu.cn/github-release/astral-sh/python-build-standalone/ uv python install 3.12
# pyproject.toml config ref: https://docs.astral.sh/uv/reference/settings/#python-install-mirror
python-install-mirror = "https://registry.npmmirror.com/-/binary/python-build-standalone/"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
# url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
