[project]
name = "quant"
version = "0.1.0"
description = "A lightweight quantitative trading system"
requires-python = ">=3.12"
dependencies = [
]

[dependency-groups]
dev = [
]


[tool.uv]
# workspace 根虽然没代码，但作为聚合包
package = false

# pyproject.toml config ref: https://docs.astral.sh/uv/reference/settings/#python-install-mirror
# 镜像下载示例：
# - uv python install --mirror https://registry.npmmirror.com/-/binary/python-build-standalone/ 3.12
# - UV_PYTHON_INSTALL_MIRROR=https://mirror.nju.edu.cn/github-release/astral-sh/python-build-standalone/ uv python install 3.12
python-install-mirror = "https://registry.npmmirror.com/-/binary/python-build-standalone/"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.uv.workspace]
members = [
    "pkgs/*",
]
# url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
